src/objects/Payment_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Address_API_Name__c</fullName>
        <label>Address API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_API_Name__c</fullName>
        <label>Amount API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_API_Login_Id__c</fullName>
        <label>Auth API Login Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_License_Key__c</fullName>
        <label>Auth License Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Transaction_Key__c</fullName>
        <label>Auth Transaction Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_API_Name__c</fullName>
        <label>City API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <description>If you are trying to get the payments from external users through a public URL this must be set.</description>
        <inlineHelpText>If you are trying to get the payments from external users through a public URL this must be set.</inlineHelpText>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Company_API_Name__c</fullName>
        <label>Company API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_API_Name__c</fullName>
        <label>Country API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_3__c</fullName>
        <label>Custom 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id_API_Name__c</fullName>
        <label>Customer Id API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_API_Name__c</fullName>
        <label>Email API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Encrypted_Payment_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Encrypted Payment URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Logging?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Encryption_Key__c</fullName>
        <defaultValue>&apos;trackmepaymentss&apos;</defaultValue>
        <label>Encryption Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expiration_Days__c</fullName>
        <label>Expiration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Payment_URL__c</fullName>
        <formula>SUBSTITUTE(Community_URL__c+&apos;?product={ !&apos;+Object_Api_Name__c +&apos;.&apos;+Product_API_Name__c+&apos;}&amp;amount={ !&apos;+ Object_Api_Name__c +&apos;.&apos;+Amount_API_Name__c +&apos;}&amp;refid={ !&apos;+ Object_Api_Name__c +&apos;.&apos;+RefId_Api_Name__c +&apos;}&amp;firstname={ !&apos;+ Object_Api_Name__c +&apos;.&apos;+First_Name_API_Name__c +&apos;}&amp;lastname={ !&apos;+Object_Api_Name__c +&apos;.&apos;+Last_Name_API_Name__c+&apos;}&amp;customerid={ !&apos;+ Object_Api_Name__c +&apos;.&apos;+Customer_Id_API_Name__c +&apos;}&amp;company={ !&apos;+ Object_Api_Name__c +&apos;.&apos;+Company_API_Name__c +&apos;}&amp;street={ !&apos;+ Object_Api_Name__c +&apos;.&apos;+Address_API_Name__c +&apos;}&amp;city={ !&apos;+Object_Api_Name__c +&apos;.&apos;+City_API_Name__c+&apos;}&amp;state={ !&apos;+Object_Api_Name__c +&apos;.&apos;+State_API_Name__c+&apos;}&amp;zip={ !&apos;+Object_Api_Name__c +&apos;.&apos;+Zip_API_Name__c+&apos;}&amp;country={ !&apos;+Object_Api_Name__c +&apos;.&apos;+Country_API_Name__c+&apos;}&amp;email={ !&apos;+Object_Api_Name__c +&apos;.&apos;+Email_API_Name__c+&apos;}&amp;objectapiname=&apos;+Object_Api_Name__c+&apos;&amp;fieldapiname=&apos;+SObject_Payment_Lookup_API_Name__c+&apos;&amp;returl={ !&apos;+ Object_Api_Name__c +&apos;.&apos;+Return_URL_API_Name__c+&apos;}&amp;custom1=1&apos;+Custom_1__c+&apos;&amp;custom2=&apos;+Custom_2__c+&apos;&amp;custom3=&apos;+Custom_3__c+&apos;&amp;custom4=&apos;+Custom_4__c+&apos;&amp;subheader={ !&apos;+Object_Api_Name__c+&apos;.&apos;+Sub_Header_API_Name__c+&apos;}&apos;, &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Payment URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_API_Name__c</fullName>
        <label>First Name API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_API_Name__c</fullName>
        <label>Last Name API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logourl_API_Name__c</fullName>
        <label>Logourl API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Api_Name__c</fullName>
        <label>Object Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_API_Name__c</fullName>
        <label>Product API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefId_Api_Name__c</fullName>
        <label>RefId Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount_API_Name__c</fullName>
        <label>Refund Amount API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_URL_API_Name__c</fullName>
        <label>Return URL API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_URL__c</fullName>
        <label>Return URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SObject_Payment_Lookup_API_Name__c</fullName>
        <label>SObject Payment Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_API_Name__c</fullName>
        <label>State API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Header_API_Name__c</fullName>
        <label>Sub Header API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_API_Name__c</fullName>
        <label>Zip API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SObject_Payment_Lookup_API_Name__c</columns>
        <columns>Auth_API_Login_Id__c</columns>
        <columns>Auth_Transaction_Key__c</columns>
        <columns>Endpoint_URL__c</columns>
        <columns>RefId_Api_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Configurations</pluralLabel>
    <recordTypes>
        <fullName>Authorize_Net</fullName>
        <active>true</active>
        <label>Authorize.Net</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stripe</fullName>
        <active>true</active>
        <label>Stripe</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>