src/objects/Payment_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SObject_Payment_Lookup_API_Name__c</columns>
    <columns>Auth_API_Login_Id__c</columns>
    <columns>Auth_Transaction_Key__c</columns>
    <columns>Endpoint_URL__c</columns>
    <columns>RefId_Api_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>